# separable-alembic-migrations

./: .gitignore  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
app_a/: pyproject.toml  start.sh
app_a/alembic/: env.py
app_a/alembic/versions/: 9d5b277216a1_first_migration.py
app_a/app/: main.py  routes.py
app_a/app/db/models/: __init__.py  model_a.py
app_a/docker/: Dockerfile  start.sh
app_a/models/: base.py  model_a.py
app_b/: pyproject.toml  start.sh
app_b/alembic/: env.py
app_b/alembic/versions/: 9d109b9ca4a1_first_migration.py  c7c9e94acecd_other_2.py  de92b4238da0_add_a_column.py
app_b/app/: main.py  routes.py  settings.py
app_b/docker/: start.sh
app_b/models/: __init__.py  base.py  model_b.py
auth/: Dockerfile
auth/alembic/: env.py
auth/alembic/versions/: 1ab5898e2a38_add_basic_user_table.py
auth/app/core/: api.py  settings.py
auth/app/db/models/: base.py
billing/: Dockerfile
billing/alembic/: env.py
billing/alembic/versions/: 835e3fb26e19_add_fk_constraints_and_on_delete_props.py  cbe514674831_add_user_subscription_table.py  d9c9f79e2213_add_subscription_table.py
billing/models/: base.py  subscriptions.py
docker/: Dockerfile  docker-compose.api.base.yml  docker-compose.yml
scripts/: start.sh
services/auth/alembic/: env.py
services/auth/app/core/: api.py  settings.py
services/auth/app/routes/: __init__.py  users.py
services/auth/app/schemas/: base.py  users.py
services/auth/app/services/: users.py
services/billing/alembic/: env.py
services/billing/app/core/: api.py
(+15 files in other folders)
