[tool.poetry]
name = "separable-alembic-migrations"
version = "0.1.0"
description = ""
authors = ["YvanBuggy <yvan@mystic.ai>"]
readme = "README.md"
packages = [{include = "separable_alembic_migrations"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
